feat: 운영체제 파일 시스템 차이로 인한 테스트 실패 부분 수정